fixed styling on iPhone

--- a/assets/css/marcelruss.css
+++ b/assets/css/marcelruss.css
@@ -61,7 +61,7 @@ h4 {
   }
   
   .card p {
-	font-size: smaller;
+	font-size: medium;
 	line-height: 1.5;
   }
   
